--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     color: #121213;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -68,7 +68,7 @@ p {
     background-image: url('../img/hesus.png');
     padding: 0;
 }
-button:hover {
+.container__btn:hover {
     -webkit-transform: scale(.95);
     -moz-transform: scale(.95);
     -o-transform: scale(.95);
@@ -110,6 +110,22 @@ button:hover {
     transform: scale(1.05);
 }
 
+.ball {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: green;
+    border-radius: 50%;
+    width: 1em;
+    height: 1em;
+    font-size: 10vmin;
+    transform: translate(
+        calc( let(--x) * 1px), 
+        calc(let(--y) * 1px)
+    ) translate(-50%, -50%);
+}
+
 @media only screen and (max-width: 768px) {
     #cursor {
         display: none;
@@ -118,3 +134,25 @@ button:hover {
         cursor: unset;
     }
 } 
+
+.treat {
+    --scale-x: 0;
+    --scale-y: 0;
+    pointer-events: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: calc(50% - .5rem);
+    border-radius: 50%;
+    width: 1em;
+    height: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vmin;
+    font-weight: 700;
+    color: #777777;
+    transform: translate(calc(var(--x) * 1px), calc(var(--y) * 1px)) translate(-50%, -50%);
+    pointer-events: none;
+    animation: treat-enter 0.1s ease-in backwards, treat-exit 300ms linear calc((var(--lifetime, 3000) * 1ms) - 300ms) forwards;
+}
